--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,84 @@
+/* variables globales(se usa --nameVariable)*/
+:root{
+    --color-grass:#9bcc50
+    
+}
+/* selector universal que selecciona todos los elementos */
+
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;/*incluye tanto el contenido como el borde y el relleno dentro de las dimensiones especificadas del elemento*/
+
+}
+
 #mapa {
     display: none;
 }
 
 /* Mostrar la sección de Pokedex por defecto */
 #pokedex {
-    display: block;
+    display: block;/*none o block*/
 }
 
 body {
     font-family: "Helvetica", sans-serif;
+}
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0;
+    
+}
+.logo img{
+    width: 150px;
+}
+header form{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.form-group{/*dentro de este grupo, hay mas elementos, establezco como debe deber comportarse dentro de este grupo*/
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid #555;
+    padding: 15px 20px;
+    border-radius: 25px;
+}
+.form-group input{
+    /*afecta al input, en este caso el rectagulo de "bucar nombre de pokemon"*/
+    font-family: inherit;
+    width: 300px;
+    border: none;
+    outline: none;
+    font-size: 15px;
+}
+.icon-search{
+    width: 20px;
+    height: 20px;
+    stroke: #555;
+}
+
+/*para el nav bar*/
+nav{
+    align-items: center;
+}
+ul li{
+    display: inline-block;
+  
+    margin-right: 10px;
+}
+nav ul li a{
+    
+    text-decoration: none;/* elimina la subrayado de los enlaces */
+    padding: 5px 10px; /* añade espacio alrededor del texto del enlace */
+    background-color: #3498db; /*  añade un color de fondo a los enlaces */
+    border-radius: 10px;
 }
