--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,12 @@
 
 body {
     font-family: "Helvetica", sans-serif;
+    min-height: 100vh;
+    
+    background: url('../img/background.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 header{
@@ -23,8 +29,6 @@ header{
     align-items: center;
     width: 100%;
     height: 8vw;
-    background-color: rgb(235, 40, 40);
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     
 }
 
@@ -52,7 +56,7 @@ header{
 }
 
 .container-nav ul li a{
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 .container-nav nav ul li a:hover{
