--- a/css/styles.css
+++ b/css/styles.css
@@ -4,106 +4,128 @@
     
 }
 /* selector universal que selecciona todos los elementos */
-
 *{
-    margin:0;
+    margin:10;
     padding: 0;
     box-sizing: border-box;/*incluye tanto el contenido como el borde y el relleno dentro de las dimensiones especificadas del elemento*/
-
+    
 }
-
 
 body {
     font-family: "Helvetica", sans-serif;
+    background: url(../img/fondo.jpg) no-repeat center center fixed;
+    background-size: cover;
+    display: flex;
+    flex-direction: column; /* Cambiar la dirección del flujo de columnas para apilar elementos */
+    align-items: center; /* Centrar horizontalmente */
+    height: 100vh; /* Esto asegura que el body ocupe toda la altura de la ventana */
+    margin: 0; /* Para eliminar el margen predeterminado del body */
 }
 
-header{
-    display: grid;
-    grid-template-columns: 30% 70%;
-    align-items: center;
-    width: 100%;
-    height: 8vw;
-    background-color: rgb(235, 40, 40);
+body.light-mode{
+    --colorCard: rgba(255,255,255,0.2);
+    --colorTextoCard: black;
+    
+}
+body.dark-mode{
+    --colorCard: rgba(255,255,255,0.2);
+    --colorTextoCard: white;
+}
+header {
+    position: fixed;
+    top: 0; /* Fija el header en la parte superior de la ventana. */
+    display: flex;
+    justify-content: space-between;
+    padding: 6px 15px; 
+    align-items: center; 
+    height: 150px; /* Ajusta la altura del header según tus necesidades */
+    max-width: 100%; /* Ancho máximo del header */
+    min-width: 300px; /* Ancho mínimo del header */
+    width: 90%; /* Ocupa todo el ancho de la ventana */
+    background-color: white;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 15px; /* Establece un valor de borde redondeado, ajusta según desees */
+    border-bottom: 5%;
+
+}
+.nubes{
+    position: absolute;
+   
+}
+.container-nav {
+    padding: 5px 10%;
     
 }
 
 
+
 /* logo*/
 .logo {
-    display: flex;
-    justify-content: center;
+    justify-content: flex-start;
 }
 .logo img{
-    width: 150px;
+    width: 250px;
+    height: 100%;
 }
 
 
-/*nav*/
+
 
 .container-nav ul {
+    padding: 5px 10%;
     list-style: none;
     display: flex;
+
 }
 .container-nav ul li {
+    
     padding: 0 20px;
     font-size: 17px;
     font-weight: 700;
 }
 
 .container-nav ul li a{
+    
     color: black;
     text-decoration: none;
 }
 .container-nav nav ul li a:hover{
     color: #FFFFFF;
-  }
-/*
-
-header form{
-    display: flex;
-    align-items: center;
-    gap: 15px;
 }
-.form-group{//dentro de este grupo, hay mas elementos, establezco como debe deber comportarse dentro de este grupo
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    border: 1px solid #555;
-    padding: 15px 20px;
-    border-radius: 25px;
-}
-.form-group input{
-    //afecta al input, en este caso el rectagulo de "bucar nombre de pokemon"
-    font-family: inherit;
-    width: 300px;
-    border: none;
-    outline: none;
-    font-size: 15px;
-}
-.icon-search{
-    width: 20px;
-    height: 20px;
-    stroke: #555;
+.container-cloud {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden; /* Oculta el contenido que se desplaza fuera del área visible */
 }
 
-//para el nav bar
-nav {
-    text-align: center; // Centra horizontalmente los elementos hijos 
-    align-items: center; // se puede eliminar esto, ya que solo se aplica a elementos flex 
+
+.cloud {
+    position: fixed;
+    margin-top: 550px;
+    width: 290px;
+    height: 200px;
+    background-image: url(../img/nubes.png);
+    background-size: 100% 100%;
+    position: absolute;
+    z-index: -1;
+    animation: movimiento1 25s infinite;
 }
 
-ul li{
-    display: inline-block;
-  
-    margin-right: 10px;
-}
-nav ul li a{
+
+@keyframes movimiento1 {
+    from{
+        margin-left: 100%;
+    }
+    to{
+        margin-left: -30%;
+    }
     
-    text-decoration: none;// elimina la subrayado de los enlaces //
-    padding: 5px 10px; // añade espacio alrededor del texto del enlace //
-    background-color: #3498db; // añade un color de fondo a los enlaces //
-    border-radius: 10px;
 }
 
-*/
+
+
+  
+
+
+
