--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -7,3 +7,11 @@
     margin: auto;
     padding: 50px 0;
 }
+
+.seccion-pokedex {
+    width: 90%;
+    background-color: white;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    border-bottom: 5%;
+}
