--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ body {
     display: flex; /* Agrega display: flex; para habilitar flexbox */
     justify-content: space-around; /* Alinea los elementos en el inicio del contenedor */
     background-color: white;
-    height: 100px;
     margin-bottom: 20px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 15px; /* Establece un valor de borde redondeado, ajusta según desees */
@@ -43,40 +42,34 @@ body {
 }
 
 .logo img {
-    
     width: 250px;
     height: 100%;
 }
 
 .nav-barra {
     width: 90%;
-    height: 100px;
+    margin: 20px 0;
+    padding-top: 18px;
+    padding-bottom: 8px;
     background-color: white;
-    position: relative;
     display: flex;
     justify-content:center;
     align-items: center;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     border-bottom: 5%;
-    margin-bottom: 10px;
-    justify-content: space-evenly;
+  
 }
 .nav-barra ul{
     display: flex;
+    justify-content: space-around;
+    gap: 200px;
     width: 150px;
-    margin-right: 320px;
 }
 .nav-barra ul li{
-    position: relative;
-    display: flex;
-    
     list-style: none;
-    width: 70px;
-    height: 70px;
-    z-index: 1;
-    margin-right: 200px;
  }
+
  .nav-barra ul li a{
      position: relative;
      display: flex;
@@ -86,20 +79,25 @@ body {
      width: 100%;
      text-align: center;
      font-weight: 500;
- 
  }
+
  .nav-barra ul li a .icon{
      position: relative;
      display: block;
      line-height: 75px;
      font-size: 1.5em;
      text-align: center;
-     transition: 0.5s;
+     transition: ease 0.3s;
      
  }
+
+ .nav-barra ul li a .text{
+    transition: ease 0.3s;
+    
+}
  .nav-barra ul li:hover a .icon{
      transform:  translateY(-10px);
-     
+
  }
  .nav-barra ul li a .text{
      position: absolute;
@@ -111,33 +109,9 @@ body {
      
  }
  .nav-barra ul li:hover a .text{
-    opacity: 1;
-    transform: translateY(10px);
-     
+    opacity: 0.8;
+    transform: translateY(10px); 
  }
-
-
- .seccion {
-    
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center; /* Centra los elementos verticalmente */
-    width: 90%;
-    background-color: white;
-    height: 90vh;
-    margin-bottom: 20px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    border-bottom: 5%;
-}
-
-.chansey-ic{
-    filter: drop-shadow(5px 5px 10px #555);
-}
-
-
 
 
 
