--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,8 @@
-/* variables globales (se usa --nameVariable) */
-:root {
-    --color-grass: #9bcc50;
-}
+@import 'https://fonts.googleapis.com/css?family=Montserrat:300, 400, 700&display=swap';
 
 /* Selector universal que selecciona todos los elementos */
 * {
-    font-family: "Helvetica", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;/* Incluye tanto el contenido como el borde y el relleno dentro de las dimensiones especificadas del elemento */
@@ -18,7 +15,7 @@ body {
     flex-direction: column; /* Cambiar la dirección del flujo de columnas para apilar elementos */
     align-items: center; /* Centrar horizontalmente */
     height: 100vh; /* Esto asegura que el body ocupe toda la altura de la ventana */
-    /* Para eliminar el margen predeterminado del body */
+  
 }
 .container-header {
     width: 90%;
@@ -33,7 +30,7 @@ body {
     margin-bottom: 20px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 15px; /* Establece un valor de borde redondeado, ajusta según desees */
-    border-bottom: 5%;
+
 }
 
 .logo {
@@ -50,7 +47,7 @@ body {
     width: 90%;
     margin: 20px 0;
     padding-top: 18px;
-    padding-bottom: 8px;
+    padding-bottom: 12px;
     background-color: white;
     display: flex;
     justify-content:center;
@@ -65,53 +62,35 @@ body {
     justify-content: space-around;
     gap: 200px;
     width: 150px;
-}
-.nav-barra ul li{
     list-style: none;
- }
+}
 
  .nav-barra ul li a{
-     position: relative;
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
-     width: 100%;
-     text-align: center;
-     font-weight: 500;
+     text-decoration: none;
+     gap: 5px;
+     color: rgb(58, 55, 55);
  }
 
  .nav-barra ul li a .icon{
-     position: relative;
-     display: block;
-     line-height: 75px;
-     font-size: 1.5em;
-     text-align: center;
-     transition: ease 0.3s;
-     
+     opacity: 0.7;
+     font-size: 50px;
+     transition: ease 0.25s;
  }
 
  .nav-barra ul li a .text{
-    transition: ease 0.3s;
-    
+    transition: ease 0.25s;
+    font-weight: 500;
 }
- .nav-barra ul li:hover a .icon{
-     transform:  translateY(-10px);
 
- }
- .nav-barra ul li a .text{
-     position: absolute;
-     color:black;
-     font-weight:400 ;
-     font-size: 0.75em;
-     letter-spacing: 0.05em;
-     transform: translateY(20px);
-     
- }
- .nav-barra ul li:hover a .text{
-    opacity: 0.8;
-    transform: translateY(10px); 
- }
+.nav-barra ul li:hover a .icon, .nav-barra ul li:hover a .text {
+    color: rgb(223, 79, 12);
+    transform: translateY(-8px);
+}
+
 
 
 
