--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -3,15 +3,37 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
     gap: 1em;
-    width: 80%;
-    margin: auto;
     padding: 50px 0;
+    margin: auto;
 }
+
+
 
 .seccion-pokedex {
     width: 80%;
     background-color: white;
+    padding: 50px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     border-bottom: 5%;
 }
+.container-img-pk{
+    background-color: rgba(241, 241, 241, 0.747);
+    background-size: cover;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.pokemon-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8);
+}
+
+.pokemon-card h2{
+    text-transform: capitalize;
+}
+
