--- a/css/styles.css
+++ b/css/styles.css
@@ -38,21 +38,19 @@ body {
     flex-direction: column; /* Cambiar la dirección del flujo de columnas para apilar elementos */
     align-items: center; /* Centrar horizontalmente */
     height: 100vh; /* Esto asegura que el body ocupe toda la altura de la ventana */
-  
+    gap: 25px;
 }
 header{
-    top: 0;
-    left: 0;
     width: 100%;
     padding: 0px 100px;
     background: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
-   /*z-index: 100;*/
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-    
+
 }
+
 header form{
     display: flex;
     align-items: center;
@@ -134,12 +132,12 @@ header form{
 
 .navigation ul li:hover a .text {
     color: rgb(223, 79, 12);
-    transform: translateY(-8px);
+    transform: translateY(-4px);
   
 }
 .navigation ul li:hover a .icon {
     color: rgb(223, 79, 12);
-    transform: translateY(-8px);
+    transform: translateY(-4px);
     transform: rotate(360deg) ;
 }
 
