--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -12,7 +12,8 @@
 .seccion-pokedex {
     width: 80%;
     background-color: white;
-    padding: 50px;
+    margin-top: 40px; /* Aumenta el margen superior para mayor separación */
+    margin-bottom: 20px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     border-bottom: 5%;
