--- a/css/inicio.css
+++ b/css/inicio.css
@@ -15,20 +15,38 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     border-bottom: 5%;
+    background-color: rgb(236, 82, 82);
 
 }
-h1{
+.contenido-info h1{
     font-family: 'Fascinate', cursive;
     font-size:56px;
+    padding: 5px;
+    background-color: white;
+    color: rgb(207, 163, 81); /* Cambia el color del texto a naranja */
+    -webkit-text-stroke: 1px darkorange; /* Agrega un borde de 2 píxeles de ancho en color naranja oscuro (para navegadores webkit) */
+    border-radius: 25px;
+    margin: 1%;
     
-    color: orange; /* Cambia el color del texto a naranja */
-    -webkit-text-stroke: 2px darkorange; /* Agrega un borde de 2 píxeles de ancho en color naranja oscuro (para navegadores webkit) */
+
+}
+.contenido-info h3{
+    font-family: 'Fascinate', cursive;
+    font-size:30px;
+    padding: 5px;
+    background-color: white;
+    color: rgb(207, 163, 81); /* Cambia el color del texto a naranja */
+    -webkit-text-stroke: 1px darkorange; /* Agrega un borde de 2 píxeles de ancho en color naranja oscuro (para navegadores webkit) */
+    border-radius: 25px;
+    margin: 1%;
     
 
 }
 h2{
     font-family: 'Fascinate', cursive;
     font-size: 36px;
+    color: rgb(207, 163, 81); /* Cambia el color del texto a naranja */
+    -webkit-text-stroke: 1px darkorange; /* Agrega un borde de 2 píxeles de ancho en color naranja oscuro (para navegadores webkit) */
 }
 p {
     font-size: 26px; /* Cambia el tamaño de la fuente de todos los párrafos a 16 píxeles */
@@ -45,13 +63,21 @@ p {
     width: 350px;
     height: 100%;
     filter: drop-shadow(5px 5px 10px #555);
+    object-fit: contain;
     
 }
+.contenido-info article summary{
+   background-color: white;
+   border: 1px solid  #555;
+   border-radius: 25px;
+  
+}
+/*
 .contenido-info article aside {
     display: flex;
     justify-content: center;
 }
-
+*/
 #nav-inicio a {
     color: rgb(223, 79, 12);
 }
