--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -135,6 +135,13 @@ div.unknown.pokemon-card .card-container-name {
     padding: 50px 0;
     margin: auto;
 }
+body {
+    background: url(../img/mode-1.png) ;
+    background-repeat: repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 
 
