--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -129,20 +129,11 @@ div.unknown.pokemon-card .card-container-name {
 
 #cards-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     justify-items: center;
     gap: 1em;
     padding: 50px 0;
-    margin: auto;
 }
-body {
-    background: url(../img/mode-1.png) ;
-    background-repeat: repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 
 
 .seccion-pokedex {
@@ -211,6 +202,28 @@ body {
     text-transform: capitalize;
 }
 
-#nav-pokedex a {
+#nav-pokedex  {
     color: rgb(223, 79, 12);
+}
+
+@media screen and (min-width: 576px) {
+   
+}
+
+@media screen and (min-width: 768px)  {
+    #cards-container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 992px)  {
+    #cards-container {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1400px) {
+    #cards-container {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
