--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 :root {
     --color-fire: #ff7402;
-    --color-grass: #9bcc50;
+    --color-grass: #25753d;
     --color-steel: #9eb7b8;
     --color-water: #4592c4;
     --color-psychic: #f366b9;
@@ -104,7 +104,9 @@ header {
     opacity: 0.7;
 }
 
-
+.btn-collapse {
+    border: 0;
+}
 
 
 @media screen and (min-width: 576px) {}
@@ -132,6 +134,8 @@ header {
         justify-content: center;
         align-items: center;
     }
+
+    
 }
 
 @media screen and (min-width: 992px) {
