--- a/css/inicio.css
+++ b/css/inicio.css
@@ -98,3 +98,5 @@ p {
     width: 80px;
     border-radius: 100%;
 }
+
+/* darkmode cambiar el color de la seccion y el de las letras a color blanco*/
