--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -1,3 +1,8 @@
+:root {
+    --dark-color-seccion: rgb(62, 77, 117);
+}
+
+
 #nav-pokedex {
     color: rgb(223, 79, 12);
 }
@@ -90,7 +95,10 @@
     text-transform: capitalize;
 }
 
-
+/* darkmode */
+body.darkmode .seccion-pokedex {
+    background-color: var(--dark-color-seccion);
+}
 
 
 
