--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,7 @@
 @import 'https://fonts.googleapis.com/css?family=Montserrat:300, 400, 700&display=swap';
 
 :root {
-    --color-fire: #ff7402;
-    --color-grass: #25753d;
-    --color-steel: #9eb7b8;
-    --color-water: #4592c4;
-    --color-psychic: #f366b9;
-    --color-ground: #ab9842;
-    --color-ice: #51c4e7;
-    --color-flying: #3dc7ef;
-    --color-ghost: #4d5b64;
-    --color-normal: #a4acaf;
-    --color-poison: #7e0058;
-    --color-rock: #a38c21;
-    --color-fighting: #d56723;
-    --color-dark: #707070;
-    --color-bug: #729f3f;
-    --color-dragon: linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);
-    --color-electric: #bba909;
-    --color-fairy: #fdb9e9;
-    --color-shadow: #7b62a3;
-    --color-unknow: #757575;
-    --color-primary: #006d77;
-    --color-primary-hover: #83c5be;
+    --dark-color: rgb(38, 54, 95);
 }
 
 /* Selector universal que selecciona todos los elementos */
@@ -38,8 +17,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url(../img/mode-1.png);
-    background-repeat: repeat;
+ 
 }
 
 header {
@@ -48,8 +26,9 @@ header {
 }
 
 .navbar {
-    gap: 10px
+    gap: 30px
 }
+
 /* estilos cuando esta en tamaño sm */
 .nav {
     display: flex;
@@ -108,6 +87,69 @@ header {
     border: 0;
 }
 
+/* THEME*/
+
+#cambiarTheme {
+    background-color: #ffffff65;
+    width: 7em;
+    height: 3em;
+    border-radius: 10em;
+    padding: 0 0.5em;
+
+    box-shadow: inset 0 8px 60px rgba(0, 0, 0, .1),
+        inset 0 8px 8px rgba(0, 0, 0, .1),
+        inset 0 -4px 4px rgba(0, 0, 0, .1);
+    position: relative;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+
+#pokeball-button {
+    width: 2.5em;
+    height: 2.5em;
+    border-radius: 50%;
+    position: absolute;
+    box-shadow: 0 8px 40px rgba(0,0,0, .2);
+    transition: transform .3s ease;
+}
+
+.light-theme {
+    background-image: url('../img/pokeball.png'); /* Ruta de tu imagen PNG */
+    background-size: cover;
+    background-position: center;
+}
+
+
+
+/* darkmode */
+body {
+    background: url(../img/mode-1.png);
+    background-repeat: repeat;
+}
+body.darkmode{
+    background: url(../img/mode-2.webp);
+}
+
+body.darkmode header{
+    background: var(--dark-color);
+    box-shadow: 0px 2px 5px rgba(4, 3, 66, 0.5);
+}
+
+body.darkmode .nav a {
+    color: rgb(218, 216, 216);
+}
+
+.darkmode #pokeball-button{
+    background-image: url('../img/ultraball.png');
+    transform: translateX(3.5em) rotate(360deg);
+    background-color: var(--dark-color);
+    box-shadow: 0 8px 40px rgba(0,0,0, .3);
+}
+
+
+
 
 @media screen and (min-width: 576px) {}
 
@@ -117,6 +159,7 @@ header {
         flex-direction: row;
         gap: 100px;
     }
+
     .nav .icon {
         font-size: 25px;
     }
@@ -125,8 +168,8 @@ header {
         font-size: 12px;
     }
 
-    
-    
+
+
     .nav a {
         gap: 5px;
         flex-direction: column;
@@ -135,7 +178,7 @@ header {
         align-items: center;
     }
 
-    
+
 }
 
 @media screen and (min-width: 992px) {
@@ -143,6 +186,7 @@ header {
         width: 150px;
         ;
     }
+
     .nav .icon {
         font-size: 40px;
     }
@@ -161,6 +205,6 @@ header {
     .nav .icon {
         font-size: 50px;
     }
-   
+
 
 }
